# frameworks-skeleton

./: .gitignore  README.md  admin.py  app.py  config.py  env  gitignore  pyproject.toml
app/: __init__.py  flask.py  models.py  settings.py
app/admin/: site.py  views.py
flask_skeleton/: __init__.py
