[tool.poetry]
name = "flask-skeleton"
version = "0.1.0"
description = ""
authors = ["Mario Hernandez <yo@mariofix.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
black = "^19.10b0"
python-dotenv = "^0.14.0"
peewee = "^3.13.3"
pymysql = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
